--- a/index.html
+++ b/index.html
@@ -11,10 +11,34 @@
       <h1>Welcome to my homepage</h1>
     </header>
     <main>
-      <h2>Section 1</h2>
+      <section>
+        <article>
+        <img src="./personal-website/koala.jpg" alt="self-portrait" width="480" height="320">
+        <p>That's me</p>
+        </article>
+        <article>
+        <p>
+        <h2>Navigation</h2>
+        <ul>
+            <li><a href=#Contact>Contact</a></li>
+            <li><a href=#Biography>Biography</a></li>
+        </ul>
+        </p>
+        </article>
+      </section>
+      <section>
+        <ul>Contact</ul>
+        <li>Phone: XXXXXX</li>
+        <li>E-Mail: xx@xx.com</li>
+      </section>
+      <section>
+        <ul>Social Media</ul>
+            <li><a href="https://github.com/WinterIsCoding23">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/markus-winter-78419079/">LinkedIn</a></li>
+      </section>
     </main>
     <footer>
-      <p>Copyright &copy; Markus Winter</p>
+      <p>Copyright &copy; Markus Winter 2023</p>
     </footer>
   </body>
 </html>
