--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Navigation</h2>
         <ul>
             <li><a href=#Contact>Contact</a></li>
-            <li><a href=#Biography>Biography</a></li>
+            <li><a href=#About>Biography</a></li>
         </ul>
         </p>
         </article>
@@ -35,6 +35,10 @@
         <ul>Social Media</ul>
             <li><a href="https://github.com/WinterIsCoding23">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/markus-winter-78419079/">LinkedIn</a></li>
+      </section>
+      <section>
+        <h2>About</h2>
+        <p>I worked as a project manager for more than eight years. Now I have finally decided to enrol in a three-month-bootcamp at SPICED Academy in Berlin. I am looking forward to work as a Full Stack Web Developer after graduation.</p>
       </section>
     </main>
     <footer>
