--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="./personal-website/koala.jpg" alt="self-portrait" width="480" height="320">
         <p>That's me</p>
         </article>
-        <article>
+        <aside>
         <p>
         <h2>Navigation</h2>
         <ul>
@@ -24,13 +24,9 @@
             <li><a href=#About>Biography</a></li>
         </ul>
         </p>
-        </article>
+        </aside>
       </section>
-      <section>
-        <ul>Contact</ul>
-        <li>Phone: XXXXXX</li>
-        <li>E-Mail: xx@xx.com</li>
-      </section>
+      
       <section>
         <ul>Social Media</ul>
             <li><a href="https://github.com/WinterIsCoding23">GitHub</a></li>
@@ -39,6 +35,11 @@
       <section>
         <h2>About</h2>
         <p>I worked as a project manager for more than eight years. Now I have finally decided to enrol in a three-month-bootcamp at SPICED Academy in Berlin. I am looking forward to work as a Full Stack Web Developer after graduation.</p>
+      </section>
+      <section>
+        <ul>Contact</ul>
+        <li>Phone: XXXXXX</li>
+        <li>E-Mail: xx@xx.com</li>
       </section>
     </main>
     <footer>
