--- a/index.html
+++ b/index.html
@@ -28,19 +28,18 @@
       </section>
       
       <section>
-        <ul>Social Media</ul>
-            <li><a href="https://github.com/WinterIsCoding23">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/markus-winter-78419079/">LinkedIn</a></li>
+        <h2>Social Media</h2>
+            <a href="https://github.com/WinterIsCoding23">GitHub</a>
+            <a href="https://www.linkedin.com/in/markus-winter-78419079/">LinkedIn</a>
       </section>
       <section>
         <h2>About</h2>
         <p>I worked as a project manager for more than eight years. Now I have finally decided to enrol in a three-month-bootcamp at SPICED Academy in Berlin. I am looking forward to work as a Full Stack Web Developer after graduation.</p>
       </section>
-      <section>
-        <ul>Contact</ul>
-        <li>Phone: XXXXXX</li>
-        <li>E-Mail: xx@xx.com</li>
-      </section>
+      <h2>Contact</h2>
+        
+        <p>Phone: XXXXXX | E-Mail: xx@xx.com</p>        
+      </h2>
     </main>
     <footer>
       <p>Copyright &copy; Markus Winter 2023</p>
