change personal website

--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My beautiful homepage</title>
+    <title>Markus' homepage</title>
   </head>
+
   <body>
     <header>
       <h1>Welcome to my homepage</h1>
     </header>
     <main>
-      <section>
-        <article>
-        <img src="./personal-website/koala.jpg" alt="self-portrait" width="480" height="320">
-        <p>That's me</p>
-        </article>
-        <aside>
+      <nav>
         <p>
         <h2>Navigation</h2>
         <ul>
@@ -24,7 +20,12 @@
             <li><a href=#About>Biography</a></li>
         </ul>
         </p>
-        </aside>
+        </nav>
+      <section>
+        <article>
+        <img src="./personal-website/koala.jpg" alt="self-portrait" width="480" height="320">
+        <p>That's me 2023</p>
+        </article>
       </section>
       
       <section>
@@ -41,6 +42,7 @@
         <p>Phone: XXXXXX | E-Mail: xx@xx.com</p>        
       </h2>
     </main>
+
     <footer>
       <p>Copyright &copy; Markus Winter 2023</p>
     </footer>
