--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Creative corner</title>
-    <link rel="stylesheet" href="./">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
     <header>
       <h1>Welcome to my homepage</h1>
-      <p>The intention of this homepage is to showcase my work as a Full Stack Web Developer. Currently I am enrolled in a 3-month-course at SPICED Academy in Berlin (Germany). If you are interested you can learn more about me and my work in the respective sections.</p>
+      <p>The intention of this homepage is to showcase my work as a Full Stack Web Developer.</p>
+      <p>Currently I am enrolled in a 3-month-course at SPICED Academy in Berlin (Germany). If you are interested to learn more about me and my work in the respective sections on this page.</p>
     </header>
     <main>
       <nav>
