--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -11,6 +11,7 @@
   <body>
     <header>
       <h1>Welcome to my homepage</h1>
+      <img src="./lizard_bw.jpg" alt="lizard in black and white" width="200">
       <p>The intention of this homepage is to showcase my work as a Full Stack Web Developer.</p>
       <p>Currently I am enrolled in a 3-month-course at SPICED Academy in Berlin (Germany). If you are interested to learn more about me and my work in the respective sections on this page.</p>
     </header>
