--- a/css-responsive_playground/index.html
+++ b/css-responsive_playground/index.html
@@ -19,7 +19,9 @@
             I have a fixed width. Can you replace my fixed width with a relative
             unit that changes according to the size of my parent element?
           </p>
-          <div class="box box--one">🫐</div>
+          <div class="box box--one">🫐
+
+          </div>
         </section>
         <section class="section">
           <h3>Part 2</h3>
@@ -52,8 +54,11 @@
             there's some material in there.
           </p>
           <div class="box box--five">
-            <!-- Perhaps you may want to use the <picture> Element here? -->
+            <picture>
+              <source srcset="./img/cat_large.jpg" alt="cat_large" media="(min-width:1199px)">
+              <source srcset="./img/cat_medium.jpg" alt="cat_medium" media="(min-width:599px)">
             <img src="./img/cat_small.jpg" alt="A cat" />
+            </picture>
           </div>
         </section>
       </section>
