--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -20,7 +20,7 @@
         </ul>
       </nav>
       <section>
-        <img src="./lizard_bw.jpg" alt="lizard in black and white" width="200">
+        <img src="./assets/lizard_bw.jpg" alt="lizard in black and white" width="200">
         <h2>About</h2>
         <p>The intention of this homepage is to showcase my work as a Full Stack Web Developer. I worked as a project manager for more than eight years. At the moment I am enrolled in a three-month-bootcamp at SPICED Academy in Berlin. I am looking forward to work as a Full Stack Web Developer after graduation. <br><br>If you are interested to learn more about me and my work in the respective sections on this page.</p>
       </section>
