--- a/html-forms_personal-profile-form/index.html
+++ b/html-forms_personal-profile-form/index.html
@@ -16,21 +16,29 @@
         <p>We want to get to know you! Please enter your personal information.</p>
         <fieldset>
           <legend>Personal Information</legend>
-          <label for="firstName">First Name:</label>
-          <input name="firstName" id="firstName">
-          <label for="lastName">Last Name:</label>
-          <input name="lastName" id="lastName">
-          <label for="yourBirthday">Your Birthday:</label>
-          <input name="yourBirthday" id="yourBirthday">
-          <label for="yourBirthday">Your Birthday:</label>
-          <input type="date" timezone="[[timezone]]" name="yourBirthday" id="yourBirthday" />  
+            <label for="firstName">First Name:</label>
+            <input name="firstName" id="firstName">
+            <label for="lastName">Last Name:</label>
+            <input name="lastName" id="lastName">
+            <label for="yourBirthday">Your Birthday:</label>
+            <input name="yourBirthday" id="yourBirthday">
+            <label for="yourBirthday">Your Birthday:</label>
+            <input type="date" timezone="[[timezone]]" name="yourBirthday" id="yourBirthday" placeholder="DD-MM-YYYY"/>  
         </fieldset>
         <p>Can you tell us a little bit more? We want to annoy you with unwanted ads.</p>
         <fieldset>
           <legend>Further Information</legend>
-          <label for="favorite-color">Favourite color:</label>
-          <input type="color" name="favorite-color" id="favorite-color" />
+            <label for="favorite-color">Favourite Color:</label>
+            <input type="color" name="favorite-color" id="favorite-color" value="#E5430F" />
+            <label for="favourite-pet">What's your favourite pet?</label>
+              <select name="favourite-pet" id="favourite-pet">
+              <option value="" selected="selected" disabled>--Please choose an option--</option>
+              <option value="agra">Agra cadabra</option>
+              <option value="chicken">Chicken Turtle</option>
+              <option value="egg">Fried Egg Jellyfish</option>
+              </select>       
         </fieldset>
+        <button type="submit">Submit</button>
       </form>
         
     </section>
