solve zoo-challenge

--- a/html-forms_zoo/index.html
+++ b/html-forms_zoo/index.html
@@ -21,20 +21,42 @@
           <legend>Enter your information</legend>
 
           <!-- Email: label & input -->
-
+          <label for="email-address">E-mail-address</label>
+          <input type="email" name="email-address" id="email-address" />
           <!-- Date: label & input -->
+          <label for="date-of-visit">Day of your visit</label>
+          <input type="date" name="date-of-visit" id="date-of-visit" />
 
           <fieldset class="radio-options">
             <legend>Which one of these animals would you like to visit?</legend>
+
+            <input type="radio" name="animals" id="sloths"
+            value="sloths" />
+          <label for="sloths">relaxed sloths</label>
+            <input type="radio" name="animals" id="kangaroos"
+            value="kangaroos" />
+          <label for="kangaroos">jumpy kangaroos</label>
+            <input type="radio" name="animals" id="racoons"
+            value="racoons" />
+          <label for="racoons">thieving racoons</label>
 
             <!-- Radio Buttons: labels & inputs -->
           </fieldset>
 
           <!-- Textarea: label & input -->
+          <label for="concerns">Any concerns?</label>
+          <textarea name="concerns" id="concerns" placeholder="Please write here..."></textarea>
 
           <!-- Two Checkboxes: labels & inputs -->
+          <p>Consent for data processing & newsletter:</p>
+          <label for="data-processing"><input type="checkbox" name="data-processing" id="data-processing">Data Processing</label>          
+          
+          <label for="newsletter"><input type="checkbox" name="newsletter" id="newsletter">Newsletter</label>
+          
 
           <!-- Two Buttons: reset & submit -->
+          <button type="reset">Reset all fields</button>
+          <button type="submit">Submit</button>
         </fieldset>
       </form>
     </section>
