--- a/js-forms-2_formvalidation/index.html
+++ b/js-forms-2_formvalidation/index.html
@@ -32,6 +32,9 @@
             name="firstName"
             id="first-name"
             placeholder="Your first name"
+            minlength="4"
+            maxLength="30"
+            required
           />
 
           <label for="last-name">Last Name</label>
@@ -40,13 +43,15 @@
             name="lastName"
             id="last-name"
             placeholder="Your last name"
+            required
           />
 
           <label for="age">Age</label>
-          <input type="number" name="age" id="age" />
+          <input type="number" name="age" id="age" min="14"/>
 
           <label for="email">Email</label>
-          <input type="text" name="email" id="email" />
+          <input type="email" name="email" id="email" />
+          
         </fieldset>
 
         <fieldset>
@@ -90,6 +95,7 @@
               type="checkbox"
               name="terms-of-service"
               id="terms-of-service"
+              required
             />
             I have read the terms of service and agree to sell my soul
             <a
